perf(code-analysis): 模块内部分批也扁平并发 — 大模块不再拖后腿
问题：
上一版"模块间并发"生效了，但发现实际耗时 44 分钟。日志显示
socialflow-service / socialflow-ui 这些大模块各被切成 8 批（单
prompt > PER_MODULE_BYTES=80KB 必须切），而 summarizeOneModule 内部
for (batch in batches) 依然是串行：
  8 批 × 每批 ~2 分钟 = 16 分钟 单模块
  两个大模块就算并发跑，总耗时 ≈ 16 分钟 + FINAL 三步 ≈ 25+ 分钟

修复（扁平化并发）：
- 新增 BatchTask 内部类（moduleName + batchIndex + totalBatches + files）
- flattenBatches(modules) 把所有模块的所有 batch 展平成单一扁平列表
- 全部 BatchTask 丢进 moduleSummaryExecutor（core=8 max=10）一起跑
- ConcurrentHashMap<moduleName, String[]> 按批次 index 归集结果
- 最终按原 Map 顺序拼接 + 失败批次用占位符

重试粒度：
- 旧：模块级 retry 3 次（一个模块失败 → 整模块 8 批重跑）
- 新：批次级 retry 3 次（单批失败不拖累其他批）
- 更细的重试粒度 + 扁平并发 = 任一批失败影响面最小

预期：
- socialflow 10 模块 + 若干大模块分批，总计 ~25 批
- 并发度 10，每批 ~90s，理论 3 轮跑完 ≈ 4.5 分钟
- 实测 44 分钟应该降到 7-10 分钟（加 FINAL 三步）

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>